добавлены страницы для регистрации

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	</head>
 	<body>
 		<header>
-			<h1>Coffee shop ( demo )</h1>
+			<h1>My Coffee Shop</h1>
+			<nav>
+				<button onclick="window.location.href='./pages/sign-in.html'">
+					Sign In
+				</button>
+				<button onclick="window.location.href='./pages/sign-up.html'">
+					Sign Up
+				</button>
+			</nav>
 		</header>
 		<main>
 			<section>
@@ -155,5 +163,6 @@
 				</div>
 			</aside>
 		</main>
+		<script src="./scripts/main.js"></script>
 	</body>
 </html>
