--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -11,7 +11,7 @@
 		<div class="auth-container">
 			<div class="auth-card">
 				<h2>Sign In</h2>
-				<form class="auth-form" action="#" method="POST">
+				<form class="auth-form">
 					<div class="input-group">
 						<label for="signin-email">Email</label>
 						<input
@@ -32,13 +32,15 @@
 							placeholder="Enter your password"
 						/>
 					</div>
-					<button type="submit" class="auth-button">Sign In</button>
+					<button id="signin-button" type="submit" class="auth-button">
+						Sign In
+					</button>
 				</form>
 				<p class="signup-link">
 					Don't have an account? <a href="./sign-up.html">Sign up</a>
 				</p>
 			</div>
 		</div>
-		<script src="./scripts/main.js"></script>
+		<script src="../scripts/sign-in.js"></script>
 	</body>
 </html>
