--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -11,7 +11,7 @@
 		<div class="auth-container">
 			<div class="auth-card">
 				<h2>Sign Up</h2>
-				<form class="auth-form" action="#" method="POST">
+				<form class="auth-form">
 					<div class="input-group">
 						<label for="signup-email">Email</label>
 						<input
@@ -42,13 +42,15 @@
 							placeholder="Confirm your password"
 						/>
 					</div>
-					<button type="submit" class="auth-button">Sign Up</button>
+					<button id="signup-button" type="submit" class="auth-button">
+						Sign Up
+					</button>
 				</form>
 				<p class="signin-link">
 					Already have an account? <a href="./sign-in.html">Sign in</a>
 				</p>
 			</div>
 		</div>
-		<script src="./scripts/main.js"></script>
+		<script src="../scripts/sign-up.js"></script>
 	</body>
 </html>
