добавлена админка для управления товарами

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -42,7 +42,7 @@
 							placeholder="Confirm your password"
 						/>
 					</div>
-					<button id="signup-button" type="submit" class="auth-button">
+					<button id="signup-button" type="button" class="auth-button">
 						Sign Up
 					</button>
 				</form>
