--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -32,7 +32,7 @@
 							placeholder="Enter your password"
 						/>
 					</div>
-					<button id="signin-button" type="submit" class="auth-button">
+					<button id="signin-button" type="button" class="auth-button">
 						Sign In
 					</button>
 				</form>
